# gfx

./: .gitattributes  .gitignore  _config.yml  documentation.md  package.xml  readme.md  release_notes.md
apps/aria_flash/firmware/src/: app.c  app.h  hexdecoder.h
apps/aria_quickstart/firmware/aria_qs_9x60_ek_tm4301b.IAR/: aria_qs_9x60_ek_tm4301b.ewp  aria_qs_9x60_ek_tm4301b.ewt
apps/aria_quickstart/firmware/aria_qs_9x60_ek_tm5000_freertos.IAR/: aria_qs_9x60_ek_tm5000.ewp  aria_qs_9x60_ek_tm5000.eww  aria_qs_9x60_ek_tm5000_freertos.ewp  aria_qs_9x60_ek_tm5000_freertos.ewt
apps/aria_quickstart_ext_res/firmware/src/: app.c  app.h  (+3 more)
display/MXT-CPRO-320x480/: mxt_cpro.py
display/MXT-XPRO2-320x480/: module.py  module.xml  mxt_xpro2.py
docs/: 00000.html  00001.html  00002.html  00003.html  00004.html  00005.html  00006.html  00007.html  00008.html  00009.html  00010.html  00011.html  00012.html  00013.html  00014.html  00015.html  00016.html  00017.html  00018.html  00019.html  00020.html  00021.html  00022.html  00023.html  00024.html  00025.html  00026.html  00027.html  00028.html  00029.html  00030.html  00031.html  00032.html  00033.html  00034.html  00035.html  00036.html  00037.html  00038.html  00039.html  (+2647 more)
docs/generator/: blank_applications.md  blank_qs_e54_cult_cpro_spi_X.md  blank_qs_e70_xu_tm4301b_X.md  blank_qs_mzef_cu_wqvga_X.md  blank_quickstart.md  development_topics.md  doxyfile.conf  dt_custom_event_dynamic_widgets.md  dt_draw_pipeline_options.md  dt_dynamic_graphics.md  dt_enable_rtos.md  dt_image_decode_formats.md  dt_phantom_button_touch.md  dt_porting_applications.md  dt_third_party_display.md  examples_demonstrations.md  graphics_suite_features.md  gsf_configurator.md  gsf_designer.md  gsf_drivers.md  gsf_graphics_library.md  legato_adv_e54_cu_cpro_parallel_X.md  legato_adventure.md  legato_applications.md  legato_benchmark.md  legato_bm_e54_cult_cpro_parallel_X.md  legato_bm_e70_xu_tm4301b_X.md  legato_ck_e54_cult_cpro_parallel_X.md  legato_cooker.md  legato_fl_e54_cult_cpro_parallel_X.md  legato_flash.md  legato_mn_e54_cult_cpro_parallel_X.md  legato_monitor.md  legato_qs_c21_xpro_cpro_X.md  legato_qs_e54_cu_cpro_spi_X.md  legato_qs_x_r_e54_cult_cpro_parallel_X.md  legato_quickstart.md  legato_quickstart_ext_res.md  legato_sc_e54_cu_cpro_parallel_X.md  legato_showcase.md  (+2 more)
docs/generator/that_style/: that_style.css
docs/html/: index.html
docs/legato/generator/: doxyfile.conf
docs/legato/html/: classassetbatch_1_1AssetBatch.html  classassetheader_1_1PaletteDef.html  classbsp__utils_1_1bspSupportObj.html  classgenerate_1_1File.html  classscreen_1_1RadialMenu.html  classscreen_1_1RadialMenuItem.html  classscreen_1_1RadioButtonGroup.html  classwidget_1_1WidgetDefault.html  dir_000052_000061.html  dir_000054_000052.html  dir_000054_000060.html  dir_000055_000052.html  dir_000056_000052.html  dir_000056_000059.html  dir_000056_000060.html  dir_000057_000052.html  dir_000057_000060.html  dir_000058_000052.html  dir_000058_000060.html  dir_000060_000052.html  dir_000061_000052.html  dir_000061_000054.html  dir_000062_000052.html  dir_000062_000053.html  dir_000062_000060.html  dir_000062_000061.html  dir_000063_000061.html  dir_0a52c7050c17d93dd53bab71e6812b1e.html  dir_0e8bab13b604e1a053ad919bedbec578.html  dir_0f00349e28fb1311a0e570ea038b12bd.html  dir_19ec4ed2fd65fdbaf9cb8663560c4b00.html  dir_218b016b585b699852a35de7d005ffcd.html  dir_25e362f820dd25f12372a8d59dd56e0c.html  dir_2d1c9f419f1a861daac2f0401c8f4056.html  dir_30bb8d409b1ce54e10ad8869cc04b85a.html  dir_321edace0dc8903586723c5b82c9834d.html  dir_3234fd4ef834a4e0466ebba2256f3278.html  dir_35ffb77fc2d7021c49b72bf388ac031b.html  dir_4262acb4b1f746f3872c5e989b1f4b2d.html  dir_465acad87ad843901d2a859238591245.html  (+257 more)
driver/controller/le_ili9488/: module.xml
driver/controller/le_lcc/: drv_gfx_le_lcc.h  module.py
input/sys_input/: sys_input.py
input/sys_input/src/: sys_input_demo_mode.c
input/sys_input/templates/: sys_input.c.ftl  sys_input_demo_mode.h.ftl
middleware/aria/config/: aria.py
middleware/aria/docs/: 00000.html  00011.html  00012.html  00013.html  00014.html  00017.html  00018.html  00044.html  00049.html  00050.html  00052.html  00054.html  00055.html  00056.html  00057.html  00060.html  00062.html  00066.html  00067.html  00068.html  00079.html  00108.html  00109.html  00110.html  00133.html  00134.html  00157.html  00158.html  00159.html  00179.html  00180.html  00182.html  00183.html  00185.html  00186.html  00187.html  00191.html  00192.html  00202.html  00205.html  (+791 more)
middleware/legato/: module.py  output.txt
middleware/legato/canvas/: module.xml
middleware/legato/config/: le.py  le_config.py  le_files.py
middleware/legato/simulator/: CMakeLists.txt  legato
middleware/legato/simulator/apps/barebone/: CMakeLists.txt  legato_config.h  sim_app.c
middleware/legato/simulator/apps/benchmark/: CMakeLists.txt  screen_FPSCounters.c  screen_FPSImages.c  screen_FPSMotion.c  screen_SplashScreen.c
middleware/legato/simulator/apps/benchmark/app/: screen_FPSCounters.c  screen_FPSImages.c  screen_FPSMotion.c  screen_SplashScreen.c
middleware/legato/simulator/apps/monitor/: CMakeLists.txt  screen_default.c  sim_app.c
middleware/legato/simulator/apps/quickstart/: CMakeLists.txt  sim_app.c
middleware/legato/simulator/apps/showcase/: CMakeLists.txt  screen_ListWheel.c  screen_MainMenu.c  screen_Splash.c  sim_app.c
middleware/legato/simulator/lib/: legato_d.lib  libariale_d.lib
middleware/legato/simulator/src/: main.c  sim_driver.c  sim_driver.h  sim_extmem.c  sim_extmem.h  sim_legato.c  sim_legato.h  sim_memory.c  sim_memory.h  sim_time.c  sim_time.h  sim_touch.c  sim_touch.h
middleware/legato/templates/: libaria_config.h.ftl
templates/aria_gfx_pda_tm4301b/: Support_BSP_PIC32MZ_EF_Curiosity.py  Support_BSP_SAM_9x60_Evaluation_Kit.py  aria_gfx_pda_tm4301b.py
templates/aria_gfx_pda_tm5000/: aria_gfx_pda_tm5000.py
templates/aria_gfx_xplained_pro/: Support_BSP_PIC32MZ_EF_Curiosity.py  Support_BSP_SAM_E70_Xplained_Ultra.py  aria_gfx_xplained_pro.py
(+1934 files in other folders)
